FIX using Integer.valueOf instead of new Integer